# Mocktopus

./: Cargo.toml  metadata_ws.json
cargo/: Cargo.toml  build
cargo/src/: main.rs
macros/: Cargo.toml
macros/src/: header_builder.rs  item_injector.rs  lib.rs
mtest-test/: Cargo.toml  modified.toml
mtest-test/.mtest/: Cargo.toml  metadata.json
mtest-test/.mtest/root/: Cargo.toml  metadata.json
mtest-test/.mtest/root/src/: another.rs  lib.rs  main.rs
mtest-test/.mtest/src/: another.rs  lib.rs  main.rs
mtest-test/src/: another.rs  lib.rs  main.rs
mtest/src/: workspace_injector.rs
tests/: injecting.rs  injecting_crate.rs  mocking.rs
tests/multi_file_module/: another.rs  mod.rs
