[package]
name = "cargo-mtest"
version = "0.0.1"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "Mocktopus Cargo plugin"
repository = "https://github.com/CodeSandwich/Mocktopus"
license = "MIT"

[dependencies]
cargo = "^0.22"
quote = "0.3.15"
syn = { version = "0.11.11", features = ["full"] }
