[package]
name = "mtest_test"
version = "0.1.0"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]

[dependencies]
lazy_static = { version = "=0.2.0" }
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }
code-sandwich-crates-io-release-test = { path = "../../code-sandwich-crates-io-release-test"}

[dev-dependencies]
mocktopus = { path = ".."}

[features]
mocktopus_test_run = []
