[package]
name = "MTestTest"
version = "0.1.0"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]

[dependencies]
lazy_static = "0.2.0"
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }
code-sandwich-crates-io-release-test = { path = "../../code-sandwich-crates-io-release-test"}

[dev-dependencies]
lazy_static = "*"
